XO_Project_UAT/Project--XOGrp--UAT/src/objects/CRMfusionDBR101__General_Setting__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>CRMfusionDBR101__Boolean_Value__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Boolean Value</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Numeric_Value__c</fullName>
        <label>Numeric Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__String_Value__c</fullName>
        <label>String Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Type__c</fullName>
        <description>numeric/string/etc..</description>
        <label>Type</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>DupeBlocker General Settings</label>
    <listViews>
        <fullName>CRMfusionDBR101__All_General_Settings</fullName>
        <columns>NAME</columns>
        <columns>CRMfusionDBR101__Type__c</columns>
        <columns>CRMfusionDBR101__String_Value__c</columns>
        <columns>CRMfusionDBR101__Numeric_Value__c</columns>
        <columns>CRMfusionDBR101__Boolean_Value__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
</CustomObject>